[package]
name = "digipin-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of India Post DIGIPIN encode/decode logic"
license = "Apache-2.0"
repository = "https://github.com/malayawasthi/digipin-rs"
readme = "README.md"
keywords = ["digipin", "india-post", "geocode", "geolocation", "addressing"]
categories = ["encoding", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "digipin"
path = "src/lib.rs"

[[bin]]
name = "digipin"
path = "src/main.rs"
